--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ a{
     width: 80px;
     height: 100%;
     color: gray;
-    font-size: 20px;
+    font-size: 22px;
     padding-bottom: 2px;
     cursor: pointer;
 }
@@ -121,8 +121,24 @@ a{
     border-right: 1px solid #DCDCDC;
 }
 .me-navbar{
-    height: 28px;
-    width: 28px;
+    height: 26px;
+    width: 26px;
     border-radius: 50%;
     border: 1px solid #e1e9ee;
 }
+.fa-calendar-alt{
+    font-size: 26px;
+}
+  
+
+.premium{
+    width: 100px;
+    font-size: 13px;
+    text-align: center;
+    margin-top: -20px;
+    color: darkgoldenrod;
+}
+#premium{
+    margin-top: -5px;
+}    
+    
