--- a/style.css
+++ b/style.css
@@ -146,7 +146,11 @@ a{
 /******* Left side  *******/
 
 
-
+.main-container{
+    margin: 0 auto;
+    width: 75%;
+    
+}
 .left-side-wrapper{
     display: flex;
     flex-direction: column;
@@ -154,9 +158,10 @@ a{
 }
 
 .left-inner-main-div{
-    
     height: 100vh;
     width: 216px;
+    margin-right: 940px;
+    margin-top: 90px;
 }
 .left-inner-main-div > div{
     background: #fff;
@@ -174,8 +179,78 @@ a{
 }
 #profile-background{
     height: 55px;
-    
+    background: red;
 }
+
+.profile-info{
+    height: 160px;
+    width: 216px;
+    background: transparent;
+    padding: 12px 12px 16px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+    margin: -49px auto 12px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.profile-info img{
+    widows: 72px;
+    height: 72px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    box-shadow: inset 0 1.5px 3px 0 rgba(0, 0, 0, 0.15),
+        0 1.5px 3px 0 rgba(0, 0, 0, 0.15);
+    background-color: #fff;
+    margin-bottom: 18px;
+    cursor: pointer;
+}
+.profile-info strong{
+    font-size: 18px;
+    margin-bottom: px;
+    cursor: pointer;
+}
+.profile-info small{
+    font-size: 13px;
+    color: color: rgba(0, 0, 0, 0.6);
+}
+.profile-links{
+    font-size: 14px;
+    padding-top: 5px;
+    display: flex;
+    flex-direction: column;
+}
+#profile-links a{
+    display: flex;
+    justify-content: space-between;
+    padding: 3px 12px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
