--- a/style.css
+++ b/style.css
@@ -250,6 +250,7 @@ a{
 #profile-groups{
     width: 216px;
     padding: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.16);
 }
 
 
@@ -257,6 +258,7 @@ a{
     display: flex;
     justify-content: space-between;
     padding: 2px 12px;
+    border-radius: 10px;
 }
 #profile-groups a span{
     color: rgba(0, 0, 0, 0.6);
@@ -267,9 +269,30 @@ a{
 }
 
 
+/***** middler section******/
 
+#main-middle-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 100px;
+}
 
+.inner-middle-main{
+    grid-area: main-section;
+    margin: 0 25;
+    width: 550px;
+}
 
+/*** middle share box ***/
+.share-box{
+    background: #fff;
+    border-radius: 5px;
+    margin-top: 1px;
+    display: flex;
+    flex-direction: column;
+    height: 
+}
 
 
 
