--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ a{
     align-items: center;
     height: 100vh;
     flex-direction: column;
+    display: flex;
 }
 .left-side-wrapper{
     display: flex;
@@ -276,8 +277,9 @@ a{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-bottom: 100px;
-    width: 60%; 
+    width: 55%; 
+    margin-top: -755px;
+    margin-left: -30px
 }
 
 .inner-middle-main{
@@ -288,20 +290,29 @@ a{
 
 /*** middle share box ***/
 #share-box{
-    border-radius: 5px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column; 
-    width: 60%;
-    height: 200px;
-    
+    width: 100%;
+    height: 150px;
+    background: red;
+    padding: 20px;
 }
 .share-me{
-    height: 80px;
-    width: 80px;
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
 
 }
-
+.share-top-div{
+    display: flex;
+}
+.share-input{
+    width: 80%;
+    margin-left: 20px;
+    border-radius: 30px;
+    border: 1px solid rgba(0, 0, 0, 0.16);
+}
 
 
 
