--- a/style.css
+++ b/style.css
@@ -277,9 +277,9 @@ a{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 55%; 
+    width: 52%; 
     margin-top: -755px;
-    margin-left: -30px
+    margin-left: -70px
 }
 
 .inner-middle-main{
@@ -294,9 +294,14 @@ a{
     display: flex;
     flex-direction: column; 
     width: 100%;
-    height: 150px;
-    background: red;
+    height: 120px;
+    background: white;
     padding: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.16);
+}
+.share-top-div{
+    display: flex;
+    height: 60%;
 }
 .share-me{
     height: 50px;
@@ -304,18 +309,29 @@ a{
     border-radius: 50%;
 
 }
-.share-top-div{
-    display: flex;
-}
 .share-input{
-    width: 80%;
+    height: 50px;
+    width: 85%;
     margin-left: 20px;
     border-radius: 30px;
     border: 1px solid rgba(0, 0, 0, 0.16);
 }
-
-
-
+.share-bottom-div{
+    display: inline-block;
+    padding: 10px;
+    text-align: center;
+}
+.share-bottom-div a{
+    justify-content: space-between;
+    padding: 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.6);
+}
+.share-bottom-div a i{
+    font-size: 22px;
+    padding: 5px;
+}
 
 
 
