--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ a{
     align-items: flex-start;
     width: 52%; 
     margin-top: -755px;
-    margin-left: -70px
+    margin-left: -70px;
 }
 
 .inner-middle-main{
@@ -333,13 +333,33 @@ a{
     padding: 5px;
 }
 
+/**** Tanay Post ****/
 
-
-
-
-
-
-
+.tanay-post{
+    padding: 20px;
+    height: 600px;
+    background: white;
+    margin-top: 20px;
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.16);
+}
+.post-top-div{
+    height: 80px;
+    display: flex;
+/*    background-color: red;*/
+}
+.post-top-div > div > img{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+.post-top-div .tanay-info{
+    margin-left: 10px;
+}
+.post-top-div .tanay-info a{
+    color: rgba(0, 0, 0, 0.6);
+    padding-left: 50px;
+}
 
 
 
