--- a/style.css
+++ b/style.css
@@ -433,8 +433,21 @@ a{
     width: 100%;
 }
 
+.reaction-section{
+    padding: 5px;
+    margin-top: -15px;
+}
 
+.total-reaction{
+    padding: 10px; 
+    padding-bottom: 0px;
+    padding-top: 0px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.16);
+}
+.total-reaction i{
+    padding-left: 10px;
 
+}
 
 
 
