--- a/style.css
+++ b/style.css
@@ -449,7 +449,6 @@ a{
 }
 
 .make-reaction{
-
     font-size: 20px;
     color: rgba(0, 0, 0, 0.6);
     
@@ -457,7 +456,10 @@ a{
 .make-reaction i{
     padding: 10px;
 }
-
+.make-reaction i span{
+    font-size: 18px;
+    font-weight: 100;
+}
 
 
 
