--- a/style.css
+++ b/style.css
@@ -110,6 +110,9 @@ a{
     padding-bottom: 2px;
     cursor: pointer;
 }
+.nav-right >ul > li div:hover{
+    color: black;
+}
 #home{
     position: relative;
     font-size: 22px;
@@ -165,10 +168,12 @@ a{
     width: 18%;
     margin-right: 940px;
     margin-top: 90px;
+    position: relative;
 }
 .left-inner-main-div > div{
     background: #fff;
     border-radius: 5px;
+    position: relative;
 }
 
 /***   left side Profile Card  ****/
